--- a/At a stadium/Info.plist
+++ b/At a stadium/Info.plist
@@ -20,6 +20,16 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+    
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>My app use device location services</string>
+
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>My app use device location services</string>
+
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>My app use device location services</string>
+    
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -58,5 +68,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>画像投稿及び編集のため、カメラの使用許可を求めます。</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>画像投稿及び編集のため、写真への使用許可を求めます。</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>画像投稿及び編集のため、マイクの使用許可を求めます。</string>
 </dict>
 </plist>
