--- a/At a stadium/Info.plist
+++ b/At a stadium/Info.plist
@@ -20,16 +20,18 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-    
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>My app use device location services</string>
-
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>My app use device location services</string>
-
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>My app use device location services</string>
-    
+	<key>NSCameraUsageDescription</key>
+	<string>画像投稿及び編集のため、カメラの使用許可を求めます。</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>My app use device location services</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>My app use device location services</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>My app use device location services</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>画像投稿及び編集のため、マイクの使用許可を求めます。</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>画像投稿及び編集のため、写真への使用許可を求めます。</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -60,6 +62,8 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -68,11 +72,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSCameraUsageDescription</key>
-	<string>画像投稿及び編集のため、カメラの使用許可を求めます。</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>画像投稿及び編集のため、写真への使用許可を求めます。</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>画像投稿及び編集のため、マイクの使用許可を求めます。</string>
 </dict>
 </plist>
